Avoid oversensitive auto overflow on body

--- a/style.css
+++ b/style.css
@@ -46,6 +46,7 @@ body,
 html {
   height: 100%;
   margin: 0;
+  overflow: hidden;
   overscroll-behavior: none;
   padding: 0;
   width: 100%;
